Mon Aug 19 19:15:33 CEST 2013
microlinux-wallpapers-1.0-noarch-1_microlinux.txz: Added.
kde-wallpapers-4.10.5-i486-2_microlinux.txz: Rebuilt.
kde-base-artwork-4.10.5-i486-2_microlinux.txz: Rebuilt.
	Added a dirty hack to both packages which allows a consistent background
	image for the login manager, the splash screen and the main desktop.
kde-workspace-4.10.5-i486-2_microlinux.txz: Rebuilt.
  Added the system-wide part of a custom Joe-Sixpack-friendly user profile.
user-settings-kde-4.10.5-noarch-1_microlinux.txz: Added.
  The userspace part of our custom user profile.
+--------------------------+
Fri Aug 16 19:11:56 CEST 2013
flash-player-plugin-11.2.202.297-i386-1_microlinux.txz: Added.
hplip-3.12.11-i486-1_microlinux.txz: Upgraded.
  Fix for broken 'hp-toolbox' utility.
kmix-4.10.5-i486-1_microlinux.txz: Added.
print-manager-4.10.5-i486-1_microlinux.txz: Added.
libksane-4.10.5-i486-1_microlinux.txz: Added.
ksaneplugin-4.10.5-i486-1_microlinux.txz: Added.
skanlite-1.0-i486-1_microlinux.txz: Added.
+--------------------------+
Fri Aug 16 08:25:25 CEST 2013
acpica-20130214-i486-1_microlinux.txz: Added.
virtualbox-4.1.24-i486-1_microlinux.txz: Added.
virtualbox-kernel-4.1.24_3.2.45_smp-i486-1_microlinux.txz: Added.
+--------------------------+
Thu Aug 15 14:44:19 CEST 2013
libkcddb-4.10.5-i486-1_microlinux.txz: Added.
libmusicbrainz-2.1.5-i486-1_microlinux.txz: Added.
k3b-2.0.2-i486-1_microlinux.txz: Added.
mjpegtools-2.0.0-i486-1_microlinux.txz: Added.
libquicktime-1.2.4-i486-1_microlinux.txz: Added.
libmpeg2-0.5.1-i486-1_microlinux.txz: Added.
transcode-1.1.7-i486-1_microlinux.txz: Added.
vcdimager-0.7.23-i486-1_microlinux.txz: Added.
kde-wallpapers-4.10.5-i486-1_microlinux.txz: Added.
kdeartwork-4.10.5-i486-1_microlinux.txz: Added.
asunder-2.2-i486-1_microlinux.txz: Added.
kamera-4.10.5-i486-1_microlinux.txz: Added.
kcalc-4.10.5-i486-1_microlinux.txz: Added.
libevent-2.0.21-i486-1_microlinux.txz: Added.
transmission-2.77-i486-1_microlinux.txz: Added.