@@ -1,0 +1,1 @@
+kcharselect-*.tar.xz
