@@ -1,0 +1,1 @@
+d08f704861e9d9c6a893d13ec08fe2bf  kcharselect-4.10.5.tar.xz
