@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|'
+# on the right side mkcharselects the last column you can put a character in.  You must
+# make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':'.
+
+           |-----handy-ruler------------------------------------------------------|
+kcharselect: kcharselect (character picker)
+kcharselect:
+kcharselect: KCharSelect is a tool to select special characters from all
+kcharselect: installed fonts and copy them into the clipboard.
+kcharselect:
+kcharselect: kcharselect's home page:  http://utils.kde.org/projects/kcharselect
+kcharselect:
+kcharselect:
+kcharselect:
+kcharselect:
+kcharselect:
