@@ -1,0 +1,1 @@
+9056505c89750b006802cf57758abe84  kcolorchooser-4.10.5.tar.xz
