@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|' on
+# the right side marks the last column you can put a character in.  You must make
+# exactly 11 lines for the formatting to be correct.  It's also customary to
+# leave one space after the ':'.
+
+             |-----handy-ruler------------------------------------------------------|
+kcolorchooser: kcolorchooser (color chooser)
+kcolorchooser:
+kcolorchooser: A color chooser application for KDE.
+kcolorchooser:
+kcolorchooser: For more information, visit:  http://www.kde.org
+kcolorchooser:
+kcolorchooser:
+kcolorchooser:
+kcolorchooser:
+kcolorchooser:
+kcolorchooser:
