@@ -1,3 +1,7 @@
+
+kcharselect-4.10.5-i486-1_microlinux.txz: Added.
+kcolorchooser-4.10.5-i486-1_microlinux.txz: Added.
++--------------------------+
 Mon Aug 19 19:15:33 CEST 2013
 microlinux-wallpapers-1.0-noarch-1_microlinux.txz: Added.
 kde-wallpapers-4.10.5-i486-2_microlinux.txz: Rebuilt.
